--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "firebase-functions": "^3.2.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "debug": "^4.1.1",
+    "fresh": "^0.5.2",
+    "mime": "^2.4.4"
   }
 }
